--- a/src/Reg.css
+++ b/src/Reg.css
@@ -61,3 +61,10 @@ body {
     background-size: cover;
     background-position: center;
 }
+.reg a
+{
+    font-size: 20px;
+    color: black;
+    font-weight: bolder;
+    text-decoration: none;
+}
