--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,16 @@
 }
 body
 {
-  background-image: url(1.jpg);
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
   padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .t
@@ -15,33 +20,64 @@ body
   color:white;
   justify-content: center;
   align-items: center;
-  margin-left: 50vh;
-  margin-top: 40vh;
+  /* margin-left: 15vh;
+  margin-top: 10vh; */
   font-size: 90px;
   font-weight: bold;
 }
 .p
 {
   color: white;
-  margin-left: 55vh;
+  margin-left: 3vh;
   font-size: 35px;
   font-weight: bold;
 }
 .b
 {
-  margin-left: 90vh;
+  margin-left: 38%;
+  margin-top: 5vh;
   align-items: center;
-  font-size: 17px;
+  font-size: 19px;
   font-family: Arial;
-  width: 150px;
-  height: 40px;
+  width: 200px;
+  height: 48px;
   border-radius: 10px;
-  background-color:darkturquoise;
+  background-color: white;
   color:darkblue;
   font-weight: bolder;
   cursor: pointer;
 }
 .b:hover
 {
-  background-color: white;
+ 
+  background-color:darkturquoise;
+}
+.c2
+{
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 20%;
+}
+.cc 
+{
+  position: fixed; 
+  bottom: 0; 
+  right: 0; 
+  width: 21%;
+  height: 25%;
+}
+.c
+{
+  position: fixed; 
+  top: 0; 
+  right: 0; 
+  width: 20%;
+}
+.cc1
+{
+  position:fixed; 
+  bottom: 0; 
+  left: 0; 
+  width: 20%;
 }
