--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     margin-bottom: -30px;
     background-color: white;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
 }
 .container h2
 {
@@ -18,6 +19,7 @@
     font-size: 25px;
     font-weight: bolder;
     color:black;
+    
 }
 
 label {
